chỉ vào được index.html, test thử những trang khác

--- a/SocketFinal/SocketFinal/info.html
+++ b/SocketFinal/SocketFinal/info.html
@@ -30,7 +30,7 @@ h1 {
 
   <tr>
     <td style="text-align:right">
-      <a><img src="84832345_824958341301810_8052041469193617408_n.jpg" alt="trinh" style="width:200px;height:200px;" border="0"></a>
+      <a><img src="pic1.jpg" alt="trinh" style="width:200px;height:200px;" border="0"></a>
     </td>
     <td></td>
     <td>
@@ -54,7 +54,7 @@ h1 {
 
   <tr>
     <td style="text-align:right">
-      <a><img src="34911018_941630276045420_6884123884409323520_n.jpg" alt="han" style="width:200px;height:200px;" border="0"></a>
+      <a><img src="pic2.jpg" alt="han" style="width:200px;height:200px;" border="0"></a>
     </td>
     <td></td>
     <td>
