Sửa lỗi bắt file favicon

--- a/SocketFinal/SocketFinal/index.html
+++ b/SocketFinal/SocketFinal/index.html
@@ -40,6 +40,7 @@ button:hover {
   padding: 16px;
 }
    </style>
+   <link rel="icon" href="data:,">
 </head>
 <body>
     <form action="http://127.0.0.1:8080" method="post">
