--- a/SocketFinal/SocketFinal/404.html
+++ b/SocketFinal/SocketFinal/404.html
@@ -15,6 +15,7 @@
                 font-size: 23px;
             }
         </style>
+        <link rel="icon" href="data:,">
     </head>
     <body>
         <h1>404</h1>
