Sửa lại trang info.html và viết báo cáo

--- a/SocketFinal/SocketFinal/info.html
+++ b/SocketFinal/SocketFinal/info.html
@@ -36,9 +36,9 @@ h1 {
     <td></td>
     <td>
         <h3>Pham Doan Ngoc Trinh</h3>
-        <p class="title">some text</p>
-        <p>&nbsp<i>some text</i></p>
-        <p>Email: </p>
+        <p class="title">Vietnam National University Ho Chi Minh City - University of Science</p>
+        <p>&nbsp<i>Living in Ho Chi Minh city</i></p>
+        <p>Email: 19127302@student.hcmus.edu.vn</p>
         <p><button class="button">Contact</button></p>
     </td>
   </tr>
@@ -60,9 +60,9 @@ h1 {
     <td></td>
     <td>
       <h3>Pham Bao Han</h3>
-        <p class="title">some text</p>
-        <p>&nbsp<i>some text</i></p>
-        <p>Email: </p>
+        <p class="title">Vietnam National University Ho Chi Minh City - University of Science</p>
+        <p>&nbsp<i>Living in Ho Chi Minh city</i></p>
+        <p>Email: 19127135@student.hcmus.edu.vn</p>
         <p><button class="button">Contact</button></p>
     </td>
   </tr>
